--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -18,6 +18,8 @@
 	<string>manual</string>
 	<key>BracketedPasteMode</key>
 	<true/>
+	<key>Command</key>
+	<string></string>
 	<key>ConvertDosNewlines</key>
 	<true/>
 	<key>Default Arrangement Name</key>
@@ -412,7 +414,7 @@ Maximize Active Pane</string>
 			<key>Custom Command</key>
 			<string>No</string>
 			<key>Custom Directory</key>
-			<string>Yes</string>
+			<string>No</string>
 			<key>Default Bookmark</key>
 			<string>No</string>
 			<key>Description</key>
@@ -737,7 +739,7 @@ Maximize Active Pane</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>InconsolataLGCNerdFontCompleteM- 11</string>
+			<string>InconsolataLGCNerdFontComplete- 11</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
@@ -835,7 +837,11 @@ Maximize Active Pane</string>
 	<key>NoSyncLastTipTime</key>
 	<real>593204423.13678098</real>
 	<key>NoSyncLaunchExperienceControllerRunCount</key>
-	<integer>60</integer>
+	<integer>62</integer>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile</key>
+	<true/>
+	<key>NoSyncNeverRemindPrefsChangesLostForFile_selection</key>
+	<integer>0</integer>
 	<key>NoSyncNextAnnoyanceTime</key>
 	<real>586423558.37022698</real>
 	<key>NoSyncOnboardingWindowHasBeenShown</key>
@@ -1699,7 +1705,7 @@ Maximize Active Pane</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2020-05-10T09:25:05Z</date>
+	<date>2020-05-11T09:25:07Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
 	<key>SUSkippedVersion</key>
