--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -727,7 +727,7 @@ Maximize Active Pane</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>InconsolataLGCNerdFontComplete-Regular 9</string>
+			<string>InconsolataLGCNF 9</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
